# BoardDesk

./: boarddesk-tauri-bridge.js  index.html
.github/workflows/: build-windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
